# sigmacats-backend

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  start.sh
app/: .coveragerc  .flake8  alembic.ini  gpx-processing-example.py  pyproject.toml  pytest.ini  track.gpx
app/app/: .flake8  adjust_tables.py  backend_pre_start.py  initial_data.py  main.py  mypy.ini  prepare_tables.py
app/app/api/: api.py  test.py  users.py
app/app/core/: authentication.py  celery.py  celeryconfig.py  config.py  register.py  user_manager.py  users.py
app/app/db/: forward_refs.py  session.py  user_methods.py
app/app/models/: __init__.py  access_limiter_classification_link.py  account.py  admin.py  bike.py  classification.py  classification_access_limiter.py  coordinator.py  dummy.py  race.py  race_bonus.py  race_bonus_race_link.py  race_participation.py  ride_participation_classification_place.py  rider.py  rider_classification_link.py  season.py
app/app/sql/: create_id_sequences.sql  create_index_sequences.sql  create_test_id_sequences.sql  create_triggers.sql  disable_id_sequence_caching.sql  drop_test_id_sequences.sql  enable_id_sequence_caching.sql  sqlREADME.md
app/app/tasks/: README.md  assign_places_in_classifications.py  assign_race_places.py  basic_tasks.py  generate_race_places.py  process_race_result_submission.py  recalculate_classification_scores.py  set_race_in_progress.py  tasksREADME.md
app/app/test/: conftest.py  fixtures.py  test_db.py  test_main.py
app/app/util/: log.py
app/migrations/: README  env.py
app/scripts/: create_migration.sh
(+47 files in other folders)
