[tool.poetry]
name = "pzsp2"
version = "0.1.0"
description = ""
authors = ["Tomasz Owienko <tomasz.owienko.stud@pw.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
httpx = "^0.25.1"
sqlmodel = "0.0.12"
oracledb = "2.0.0"
celery = "^5.3.5"
redis = "^5.0.1"
flower = "^2.0.1"
tenacity = "^8.2.3"
alembic = "^1.12.1"
jsonschema = "^4.20.0"
types-jsonschema = "^4.20.0.0"
fastapi-users = {extras = ["sqlmodel"], version = "^12.1.2"}
fastapi-users-db-sqlmodel = "^0.3.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.23"
gpxpy = "^1.6.2"
matplotlib = "3.3.2"
gpxo = "^0.1.6"
scipy = "^1.11.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-lazy-fixture = "^0.6.3"



[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
